# ocaml-rdf

./: .depend  .gitattributes  .gitignore  2013_08.html  2013_09.html  2014_01.html  2014_09.html  2016_03.html  2016_11.html  Changes  Makefile  README  TODO  TODO.txt  about.html  blog.html  checkocaml.ml  configure  configure.in  doc-databases.html  doc-graphs.html  doc-install.html  doc-nodes.html  doc-sparql.html  doc-terms.html  doc-todo.html  doc.html  download.html  example.dot  example.ml  example.rdf  example.ttl  header  index.html  index.rss  kw_release.html  kw_release.rss  main.ml  master.Makefile.in  ml_enums.var  (+64 more)
draft/: TODO.txt  queries.txt
examples/: Makefile  example1.args  example1.ml  example2.ml  example3.ml  example5.args  example5.ml  example6.ml  run.sh
posts/: new-web-site.html  ocaml-rdf-0.10.0.html  ocaml-rdf-0.11.0.html  ocaml-rdf-0.7.0.html  ocaml-rdf-0.7.1.html  ocaml-rdf-0.8.0.html  ocaml-rdf-0.9.0.html
refdoc/: Kw_to_re.html  Rdf_4s_lwt.html  Rdf_acl.Open.html  Rdf_acl.from-c.html  Rdf_acl.html  Rdf_bgp.Make.html  Rdf_bgp.P.html  Rdf_bgp.S.html  Rdf_bgp.html  Rdf_config.html  Rdf_cryptokit.html  Rdf_dc.Open.html  Rdf_dc.from-c.html  Rdf_dc.html  Rdf_doap.Open.html  Rdf_doap.from-c.html  Rdf_doap.html  Rdf_dot.Node_set.html  Rdf_dot.SSet.html  Rdf_dot.Urimap.html  Rdf_dot.html  Rdf_ds.Irimap.html  Rdf_ds.Iriset.html  Rdf_ds.html  Rdf_dt.VMap.html  Rdf_dt.VSet.html  Rdf_dt.ValueOrdered.html  Rdf_dt.html  Rdf_earl.Open.html  Rdf_earl.from-c.html  Rdf_earl.html  Rdf_foaf.Open.html  Rdf_foaf.from-c.html  Rdf_foaf.html  Rdf_graph.Graph.BGP.html  Rdf_graph.Graph.html  Rdf_graph.Make.html  Rdf_graph.Storage.BGP.html  Rdf_graph.Storage.html  Rdf_graph.Storage_BGP.html  (+327 more)
src/: .depend  .gitignore  META.in  Makefile  data.ttl  data2.ttl  data5.ttl  data6.ttl  data_avg.ttl  data_concat.ttl  data_count.ttl  data_encode_for_uri.ttl  data_isblank.ttl  data_isliteral.ttl  data_lang.ttl  data_pathseq.ttl  data_pathzeroormore.ttl  data_substr.ttl  index.text  kw_to_re.ml  ppx_rdf.ml  q.spq  q6.spq  q_avg.spq  q_bnode.spq  q_concat.spq  q_count.spq  q_datefuns.spq  q_encode_for_uri.spq  q_iri.spq  q_min_max.spq  q_pathnegpropset.spq  q_pathoneormore.spq  q_pathseq.spq  q_pathzeroormore.spq  q_pathzeroorone.spq  q_replace.spq  q_strafter.spq  q_strbefore.spq  q_strlen.spq  (+146 more)
src/bench/: Makefile  benchmark_results.ttl  import.ttl  q10_1000.test  q10_10000.test  q10_100000.test  q10_1000000.test  q10_200000.test  q10_50000.test  q10_500000.test  q11_1000.test  q11_10000.test  q11_100000.test  q11_1000000.test  q11_200000.test  q11_50000.test  q11_500000.test  q12a_1000.test  q12a_10000.test  q12a_100000.test  q12a_1000000.test  q12a_200000.test  q12a_50000.test  q12a_500000.test  q12b_1000.test  q12b_10000.test  q12b_100000.test  q12b_1000000.test  q12b_200000.test  q12b_50000.test  q12b_500000.test  q12c_1000.test  q12c_10000.test  q12c_100000.test  q12c_1000000.test  q12c_200000.test  q12c_50000.test  q12c_500000.test  q1_1000.test  q1_10000.test  (+83 more)
src/lwt/: rdf_4s.ml  rdf_4s.mli
src/tests/ppx/: .gitignore  Makefile  test_ppx.ml
src/tests/sparql/: Makefile
src/tests/sparql-http/: ask.ml
src/tests/sparql-queries/: Makefile  alicefoaf.ttl  avg.spq  avg.test  bnode.test  bnode.ttl  bobfoaf.ttl  concat.test  construct_solmod.spq  construct_solmod.test  construct_solmod.ttl  construct_where.  construct_where.spq  construct_where.test  construct_with_blanks.test  construct_with_blanks.ttl  contains.spq  contains.test  contains.ttl  count.test  data1_named_graphs4.ttl  data_named_graphs4.ttl  datatype.test  datatype.ttl  datefuns.test  datefuns.ttl  distinct.test  duplicate_solutions.test  duplicate_solutions.ttl  encode_for_uri.test  foaf.spq  foaf.test  foaf.ttl  group_concat.spq  group_concat.test  hash.spq  hash.test  iri.test  isblank.test  isiri.test  (+57 more)
src/tests/sparql-syntax/: Makefile  syntax-bindings-02a.rq  syntax-expr-prec.rq
src/tests/turtle/: .gitignore  Makefile  base1.ttl  base2.ttl  escapedNamespace1.ttl  prefix1.ttl  test-21.out  test-22.out  test-24.out  test.nt  type.ttl
src/tests/turtle/TestSuite/: localName_with_assigned_nfc_bmp_PN_CHARS_BASE_character_boundaries.ttl
src/tools/: .gitignore  Makefile  foaf.ml  gen_ns_mod.ml  rdf_to_svgs.ml  rdf_to_ttl.ml  rdfs_to_dot.ml  ttl_to_rdf.ml
src/vocabs/: .gitignore  Makefile  acl.ttl  doap.ttl  earl.ttl  foaf.ttl  sioc.ttl  time.ttl
tests/: Makefile  example_from_python.ml  memory.ml  unicode.ml
web/: .gitignore  Makefile  about.html  benchmarks.html  blog.html  doc-databases.html  doc-examples.html  doc-graphs.html  doc-install.html  doc-nodes.html  doc-sparql.html  doc-terms.html  doc-todo.html  doc.html  download.html  example.rdf  index.html  style.css
web/.stog/: config  config-writing
web/.stog/templates/: disqus.tmpl  doc-in-list.tmpl  menubar.tmpl  page.tmpl  rss.tmpl
web/less/: custom-fonts.less  custom-main.less  custom-mixins.less  custom-variables.less
web/posts/: new-web-site.html  ocaml-rdf-0.10.0.html  ocaml-rdf-0.7.0.html  ocaml-rdf-0.7.1.html  ocaml-rdf-0.8.0.html  ocaml-rdf-0.9.0.html
web/refdoc/: Kw_to_re.html  Rdf_4s_lwt.html  Rdf_acl.Open.html  Rdf_acl.from-c.html  Rdf_acl.html  Rdf_bgp.Make.html  Rdf_bgp.P.html  Rdf_bgp.S.html  Rdf_bgp.html  Rdf_config.html  Rdf_cryptokit.html  Rdf_dc.Open.html  Rdf_dc.from-c.html  Rdf_dc.html  Rdf_doap.Open.html  Rdf_doap.from-c.html  Rdf_doap.html  Rdf_dot.html  Rdf_ds.html  Rdf_dt.VMap.html  Rdf_dt.VSet.html  Rdf_dt.ValueOrdered.html  Rdf_dt.html  Rdf_earl.Open.html  Rdf_earl.from-c.html  Rdf_earl.html  Rdf_foaf.Open.html  Rdf_foaf.from-c.html  Rdf_foaf.html  Rdf_graph.Graph.BGP.html  Rdf_graph.Graph.html  Rdf_graph.Make.html  Rdf_graph.Storage.BGP.html  Rdf_graph.Storage.html  Rdf_graph.Storage_BGP.html  Rdf_graph.html  Rdf_iri.Irimap.html  Rdf_iri.Iriset.html  Rdf_iri.html  Rdf_json.html  (+297 more)
