#################################################################################
#                OCaml-RDF                                                      #
#                                                                               #
#    Copyright (C) 2012-2014 Institut National de Recherche en Informatique     #
#    et en Automatique. All rights reserved.                                    #
#                                                                               #
#    This program is free software; you can redistribute it and/or modify       #
#    it under the terms of the GNU Lesser General Public License version        #
#    3 as published by the Free Software Foundation.                            #
#                                                                               #
#    This program is distributed in the hope that it will be useful,            #
#    but WITHOUT ANY WARRANTY; without even the implied warranty of             #
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the              #
#    GNU General Public License for more details.                               #
#                                                                               #
#    You should have received a copy of the GNU General Public License          #
#    along with this program; if not, write to the Free Software                #
#    Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA                   #
#    02111-1307  USA                                                            #
#                                                                               #
#    Contact: Maxence.Guesdon@inria.fr                                          #
#                                                                               #
#################################################################################

# check for one particular file of the sources
AC_INIT(master.Makefile.in)

VERSION=0.9.0
PACKAGE=rdf

# The root directory where we will compile
ROOT=`pwd`

ocaml unix.cma str.cma checkocaml.ml ocaml_config.sh || exit 1
. ./ocaml_config.sh

if test "$prefix" = "NONE" ; then
  prefix=`dirname $OCAMLBIN`
fi

if test "$datadir" = "\${datarootdir}" ; then
        datadir=${prefix}/share
fi
if test "$datadir" = "\${prefix}/share" ; then
        datadir=$prefix/share
fi

#############################
# substitutions to perform
AC_SUBST(OCAMLC)
AC_SUBST(OCAMLOPT)
AC_SUBST(OCAMLDEP)
AC_SUBST(OCAMLLEX)
AC_SUBST(OCAMLYACC)
AC_SUBST(OCAMLBEST)
AC_SUBST(OCAMLVERSION)
AC_SUBST(OCAMLLIB)
AC_SUBST(OCAMLBIN)
AC_SUBST(OCAMLDOC)
AC_SUBST(OCAMLFIND)
AC_SUBST(EXEC_PREFIX)
AC_SUBST(ROOT)
AC_SUBST(VERSION)
AC_SUBST(PACKAGE)
AC_SUBST(LIB_MYSQL)
AC_SUBST(LIB_POSTGRESQL)
AC_SUBST(LIB_LWT)
AC_SUBST(MT_FLAGS)
AC_SUBST(PACKAGES)
AC_SUBST(LWT_PACKAGES)
AC_SUBST(MENHIR)

RDF_PACKAGES="$PACKAGE, $PACKAGE.ppx"
PACKAGES=netstring,uuidm,uutf,xmlm,sedlex,menhirLib,cryptokit,pcre,yojson,iri
if test -n "$LIB_MYSQL" ; then RDF_PACKAGES="$RDF_PACKAGES, $PACKAGE.mysql"; PACKAGES=$PACKAGES,mysql; fi
if test -n "$LIB_POSTGRESQL" ; then RDF_PACKAGES="$RDF_PACKAGES, $PACKAGE.postgresql"; PACKAGES=$PACKAGES,postgresql; fi
if test -n "$LIB_LWT" ; then RDF_PACKAGES="$RDF_PACKAGES, $PACKAGE.lwt"; LWT_PACKAGES="cohttp.lwt,lwt.ppx"; fi

# Finally create the master.Makefile.in
ACFILES="master.Makefile src/META src/rdf_config.ml"
AC_OUTPUT($ACFILES)
chmod a-w master.Makefile
chmod a-w src/META
chmod a-w src/rdf_config.ml


cat << EOF
====
The following packages will be installed with findlib:
  $RDF_PACKAGES

EOF
